--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build -- --configuration production --base-href=/PersonalPortfolio/
 
       - name: List dist folder contents
-        run: ls -la dist/PersonalPortfolio
+        run: ls -la dist/personal_portfolio
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
